# SettingsLib

./: .gitignore  CMakeLists.txt  README.md  settingslib.cpp
include/: settingslib.h
src/: settingslib.cpp
